demo code/MFC (VC++)/DLBT/DLBT.h



// ***************************  以下是内核整体相关的接口 ********************************

//=======================================================================================
//  内核的启动和关闭函数，商业授权版才有私有协议功能，演示版和只能用标准BT方式
//=======================================================================================

// 内核启动时的基本参数（是否启动DHT以及启动端口等）
struct DLBT_KERNEL_START_PARAM
{
    BOOL bStartLocalDiscovery;		// 是否启动局域网内的自动发现（不通过DHT、Tracker，只要在一个局域网也能立即发现，局域网速度快，可以加速优先发现同一个局域网的人）
    BOOL bStartUPnP;				// 是否自动UPnP映射点量BT内核所需的端口
    BOOL bStartDHT;					// 默认是否启动DHT，如果默认不启动，可以后面调用接口来启动
    BOOL bLanUser;                  // 是否纯局域网用户（不希望用户进行外网连接和外网通讯，纯局域网下载模式---不占用外网带宽，只通过内网的用户间下载）
    BOOL bVODMode;                  // 设置内核的下载模式是否严格的VOD模式，严格的VOD模式下载时，一个文件的分块是严格按比较顺序的方式下载，从前向后下载；或者从中间某处拖动的位置向后下载
                                    // 该模式比较适合边下载边播放,针对这个模式做了很多优化。但由于不是随机下载，所以不大适合纯下载的方案，只建议在边下载边播放时使用。默认是普通模式下载
                                    // 仅VOD以上版本中有效

    USHORT  startPort;	            // 内核监听的端口，如果startPort和endPort均为0 或者startPort > endPort || endPort > 32765 这种参数非法，则内核随机监听一个端口。 如果startPort和endPort合法
    USHORT  endPort;				// 内核则自动从startPort ---- endPort之间监听一个可用的端口。这个端口可以从DLBT_GetListenPort获得

    // 以下是内核内部的默认设置（默认使用随机端口，并启动DHT等）
    DLBT_KERNEL_START_PARAM ()
    {
        bStartLocalDiscovery = TRUE;
        bStartUPnP = TRUE;
        bStartDHT = TRUE;
        bLanUser = FALSE;
        bVODMode = FALSE;

        startPort = 0;
        endPort = 0;
    }
};


//=======================================================================================
//  设置代理相关函数,商业授权版才有此功能，演示版暂不提供
//=======================================================================================

struct DLBT_PROXY_SETTING
{
    char    proxyHost [256];    // 代理服务器地址
    int     nPort;              // 代理服务器的端口
    char    proxyUser [256];    // 如果是需要验证的代理,输入用户名
    char    proxyPass [256];    // 如果是需要验证的代理,输入密码

    enum DLBT_PROXY_TYPE
    {
        DLBT_PROXY_NONE,            // 不使用代理
        DLBT_PROXY_SOCKS4,          // 使用SOCKS4代理，需要用户名
        DLBT_PROXY_SOCKS5,          // 使用SOCKS5代理，无需用户名和密码
        DLBT_PROXY_SOCKS5A,         // 使用需要密码验证的SOCKS5代理，需要用户名和密码
        DLBT_PROXY_HTTP,            // 使用HTTP代理，匿名访问，仅适用于标准的HTTP访问，Tracker和Http跨协议传输，下载则不可以
        DLBT_PROXY_HTTPA            // 使用需要密码验证的HTTP代理
    };

    DLBT_PROXY_TYPE proxyType;      // 指定代理的类型
};



//=======================================================================================
//  标识代理将应用于哪些连接（Tracker、下载、DHT和http跨协议下载等）
//=======================================================================================
#define DLBT_PROXY_TO_TRACKER       1  // 仅对连接Tracker使用代理
#define DLBT_PROXY_TO_DOWNLOAD      2  // 仅对下载时同用户（Peer）交流使用代理
#define DLBT_PROXY_TO_DHT           4  // 仅对DHT通讯使用代理，DHT使用udp通讯，需要代理是支持udp的
#define DLBT_PROXY_TO_HTTP_DOWNLOAD 8  // 仅对HTTP下载使用代理，当任务有http跨协议下载时有效（不包括Tracker）


//=======================================================================================
//  设置加密相关函数,将协议字符串或者所有数据均加密，实现保密传输，在兼容BT协议上突破
//  绝大部分运营商的封锁。和前面提到的私有协议不同的是，私有协议后将形成自己
//  的P2P网络，不能同其它BT客户端兼容；但私有协议完全不是BT协议了，没有BT的痕迹，可以穿透
//  更多运营商的封锁。不同的网络下，可能需要不同设置。配合伪装Http使用，在某些网络下效果更佳
//=======================================================================================
enum DLBT_ENCRYPT_OPTION
{
    DLBT_ENCRYPT_NONE,                  // 不支持任何加密的数据，遇到加密的通讯则断开
    DLBT_ENCRYPT_COMPATIBLE,            // 兼容模式：自己发起的连接不使用加密，但允许别人的加密连接进入，遇到加密的则同对方用加密模式会话；
    DLBT_ENCRYPT_FULL,                  // 完整加密：自己发起的连接默认使用加密，同时允许普通和加密的连接连入。遇到加密则用加密模式会话；遇到非加密则用明文模式会话。
                                        // 默认是完整加密
    DLBT_ENCRYPT_FORCED,                // 强制加密，仅支持加密通讯，不接受普通连接，遇到不加密的则断开
};


// 加密层级高，理论上会浪费一点CPU，但数据传输安全和突破封锁的能力会有提升
enum DLBT_ENCRYPT_LEVEL
{
    DLBT_ENCRYPT_PROTOCOL,          // 仅加密BT的通讯握手协议  －－一般用于防止运营商的阻止
    DLBT_ENCRYPT_DATA,              // 仅加密数据流（数据内容）－－ 用于保密性强的文件传输
    DLBT_ENCRYPT_PROTOCOL_MIX,      // 主动发起的连接使用加密协议模式，但如果对方使用了数据加密，也支持同他使用数据加密模式通讯
    DLBT_ENCRYPT_ALL                // 协议和数据均主动加密
};


// ***************************  以下是单个下载相关的接口 ********************************

// 单个下载的状态
enum DLBT_DOWNLOAD_STATE
{
	BTDS_QUEUED,	                // 已添加
	BTDS_CHECKING_FILES,	        // 正在检查校验文件
	BTDS_DOWNLOADING_TORRENT,	    // 无种子模式下，正在获取种子的信息
	BTDS_DOWNLOADING,	            // 正在下载中
    BTDS_PAUSED,                    // 暂停
	BTDS_FINISHED,	                // 指定的文件下载完成
	BTDS_SEEDING,	                // 供种中（种子中的所有文件下载完成）
	BTDS_ALLOCATING,                // 正在预分配磁盘空间 -- 预分配空间，减少磁盘碎片，和
                                    // 启动选项有关，启动时如果选择预分配磁盘方式，可能进入该状态
    BTDS_ERROR,                     // 出错，可能是写磁盘出错等原因，详细原因可以通过调用DLBT_Downloader_GetLastError获知
};


// 文件的分配模式,详见使用说明文档
enum DLBT_FILE_ALLOCATE_TYPE
{
    FILE_ALLOCATE_REVERSED  = 0,   // 预分配模式,预先创建文件,下载每一块后放到正确的位置
    FILE_ALLOCATE_SPARSE,          // Default mode, more effient and less disk space.NTFS下有效 http://msdn.microsoft.com/en-us/library/aa365564(VS.85).aspx
    FILE_ALLOCATE_COMPACT          // 文件大小随着下载不断增长,每下载一块数据按次序紧密排在一起,但不是他们的最终位置,下载中不断调整位置,最后文件位置方能确定         .
};


enum DLBT_RELEASE_FLAG
{
    DLBT_RELEASE_NO_WAIT = 0,           // 默认方式Release，直接释放，不等待释放完成
    DLBT_RELEASE_WAIT = 1,              // 等待所有文件都释放完成
    DLBT_RELEASE_DELETE_STATUS = 2,     // 删除状态文件
    DLBT_RELEASE_DELETE_ALL = 4         // 删除所有文件
};


enum DLBT_FILE_PRIORITIZE
{
    DLBT_FILE_PRIORITY_CANCEL        =   0,     // 取消该文件的下载
    DLBT_FILE_PRIORITY_NORMAL,                  // 正常优先级
    DLBT_FILE_PRIORITY_ABOVE_NORMAL,            // 高优先级
    DLBT_FILE_PRIORITY_MAX                      // 最高优先级（如果有该优先级的文件还未下完，不会下载低优先级的文件）
};



// ***************************  以下是种子相关的接口 ********************************

enum DLBT_TORRENT_TYPE
{
    USE_PUBLIC_DHT_NODE     = 0,    // 使用公共的DHT网络资源
    NO_USE_PUBLIC_DHT_NODE,         // 不使用公共的DHT网络节点
    ONLY_USE_TRACKER,               // 仅使用Tracker，禁止DHT网络和用户来源交换（私有种子）
};



// *********************  以下是防火墙和UPnP穿透等P2P辅助性接口 **********************

// 端口的类型
enum PORT_TYPE
{
    TCP_PORT        = 1,            // TCP 端口
    UDP_PORT                        // UDP 端口
};




// ***************************  以下是批量获取信息的接口 ********************************

// 内核的基本信息
struct KERNEL_INFO
{
    USHORT                      port;                           // 监听端口
    BOOL                        dhtStarted;                     // DHT是否启动
    int                         totalDownloadConnectionCount;   // 总的下载连接数
    int                         downloadCount;                  // 下载任务的个数
    int                         totalDownloadSpeed;             // 总下载速度
    int                         totalUploadSpeed;               // 总上传速度
    UINT64                      totalDownloadedByteCount;       // 总下载的字节数，不包括通讯，是文件数据，包括可能的错误数据（比如我从A用户那获取了一个分块，发现校验失败，也会被记录在内）。
    UINT64                      totalUploadedByteCount;         // 总上传的字节数，不包括上行通讯，是文件的上传

    int                         peersNum;                       // 当前连接上的节点总数
    int                         dhtConnectedNodeNum;            // dht连接上的活跃节点数
    int                         dhtCachedNodeNum;               // dht已知的节点数
    int                         dhtTorrentNum;                  // dht中已知的torrent文件数
};


// 单个下载任务的基本信息
struct DOWNLOADER_INFO
{
    DLBT_DOWNLOAD_STATE          state;                         // 下载的状态
    float                       percentDone;                    // 已经下载的数据，相比整个torrent总数据的大小 （如果只选择了一部分文件下载，那么该进度不会到100%）
    int                         downConnectionCount;            // 下载建立的连接数
    int                         downloadLimit;                  // 该任务的下载限速
    int                         connectionCount;                // 总建立的连接数（包括上传）
    int                         totalCompletedSeeds;            // Tracker启动以来，总下载完成的人数，如果Tracker不支持scrap，则返回-1
    int                         inCompleteNum;                  // 总的未完成的人数，如果Tracker不支持scrap，则返回-1
    int                         seedConnected;                  // 连上的下载完成的人数
    int                         totalCurrentSeedCount;          // 当前在线的总的下载完成的人数（包括连上的和未连上的）
    int                         totalCurrentPeerCount;          // 当前在线的总的下载的人数（包括连上的和未连上的）
    float                       currentTaskProgress;            // 当前任务的进度 （100.0%代表完成）
    BOOL                        bReleasingFiles;                // 是否正在释放文件句柄，一般下载完成后，虽然进度完成了，但文件句柄和缓存内部还可能需要一点时间在释放。
    UINT                        downloadSpeed;                  // 下载的速度
    UINT                        uploadSpeed;                    // 上传的速度
    UINT                        serverPayloadSpeed;             // 从服务器下载的总有效速度（不包括握手消息等非数据性传输）
    UINT                        serverTotalSpeed;               // 从服务器下载的总速度(包括握手消息、连接通讯的消耗）

    UINT64                      wastedByteCount;                // 非数据的字节数（控制信息等）
    UINT64                      totalDownloadedBytes;           // 下载的数据的字节数，但不是本次启动后的，是累积实际文件完成校验的。比如刚启动，如果本地文件就有500M是上次下载完成后的，那么等文件校验通过，这个数字会从500M开始。
    UINT64                      totalUploadedBytes;             // 上传的数据的字节数，这个是指本次启动后的累积有效上传数据
    UINT64                      totalWantedBytes;               // 选择的总数据大小
    UINT64                      totalWantedDoneBytes;           // 选择的总数据中，已下载完成的数据大小

    UINT64                      totalServerPayloadBytes;        // 从服务器下载的数据总量（本次启动以来的文件数据，也包括了如果收到错误的数据，即使后来丢弃的 -- 不过一般服务器如果没问题，不会丢弃数据的）
    UINT64                      totalServerBytes;               // 从服务器下载的所有数据的总量（包括totalServerPayloadBytes，以及握手数据、收发消息等）
    UINT64                      totalPayloadBytesDown;          // 本次启动后总的下载的数据块类型的数据量（包括了服务器的数据，以及可能丢弃的数据）
    UINT64                      totalBytesDown;                 // 本次启动后，总的所有数据的下行数据量（包括了服务器以及所有客户的数据、辅助通讯数据量等），这个数据因为有很多协议数据，文件下载完成后，给别人上传时的一些下行通讯也会记录在内
																// 所以这个数字随着启动时间，会不停增加

    // Torrent信息
    BOOL                        bHaveTorrent;                   // 用于无种子下载模式，判断是否已经获取到了torrent文件
    UINT64                      totalFileSize;                  // 文件的总大小
    UINT64                      totalFileSizeExcludePadding;    // 实际文件的大小，不含padding文件, 如果种子中无padding文件，则和totalFileSize相等
    UINT64                      totalPaddingSize;               // 所有padding数据的大小。如果制作种子时没启用padding文件，则为0
    int                         pieceCount;                     // 分块数
    int                         pieceSize;                      // 每个块的大小
    char                        infoHash [256];                 // 文件的Hash值
};


// 每个连接上的节点（用户）的信息
struct PEER_INFO_ENTRY
{
	int							connectionType;					// 连接类型 0：标准BT(tcp); 1: P2SP（http） 2: udp（可能是直接连接或者穿透）
    int                         downloadSpeed;                  // 下载速度
    int                         uploadSpeed;                    // 上传速度
    UINT64                      downloadedBytes;                // 下载的字节数
    UINT64                      uploadedBytes;                  // 上传的字节数

    int                         uploadLimit;                    // 该连接的上传限速，比如如果对服务器的IP限速了，则这地方可以看到这个IP的限速情况
    int                         downloadLimit;                  // 该连接的下载限速，比如如果对服务器的IP限速了，则这地方可以看到这个IP的限速情况

    char                        ip [64];                        // 对方IP
    char                        client [64];                    // 对方使用的客户端

};


// 所有连接上的节点（用户）的信息
struct PEER_INFO
{
    int                         count;                          // 总的节点（用户）数
    PEER_INFO_ENTRY             entries [1];                    // 节点信息的数组
};