demo code/Delphi/dlbt.pas

unit DLBT;

interface

uses
  windows, SysUtils;

const
   DLBT_Library = 'dlbt.dll';

//=======================================================================================
//  标识代理将应用于哪些连接（Tracker、下载、DHT和http跨协议下载等）
//=======================================================================================
DLBT_PROXY_TO_TRACKER       = 1;  // 仅对连接Tracker使用代理
DLBT_PROXY_TO_DOWNLOAD      = 2;  // 仅对下载时同用户（Peer）交流使用代理
DLBT_PROXY_TO_DHT           = 4;  // 仅对DHT通讯使用代理，DHT使用udp通讯，需要代理是支持udp的
DLBT_PROXY_TO_HTTP_DOWNLOAD = 8;  // 仅对HTTP下载使用代理，当任务有http跨协议下载时有效（不包括Tracker）

// 对所有均使用代理

type
  QWORD = int64;
  USHORT = word;
  int = integer;
  LPBYTE = array of Ansichar;
  handle = HWND;
  PLPSTR=^LPSTR;
  PPLPSTR=^PLPSTR;

  
  //代理的类型
   DLBT_PROXY_TYPE = (
                          DLBT_PROXY_NONE,            // 不使用代理
                          DLBT_PROXY_SOCKS4,          // 使用SOCKS4代理
                          DLBT_PROXY_SOCKS5,          // 使用SOCKS5代理
                          DLBT_PROXY_SOCKS5A,         // 使用需要密码验证的SOCKS5代理
                          DLBT_PROXY_HTTP,            // 使用HTTP代理
                          DLBT_PROXY_HTTPA            // 使用需要密码验证的HTTP代理
                          );

  // 单个下载的状态
   DLBT_DOWNLOAD_STATE = (
                            	BTDS_QUEUED,	                // 已添加
	                            BTDS_CHECKING_FILES,	        // 正在检查校验文件
	                            BTDS_DOWNLOADING_TORRENT,	    // 无种子模式下，正在获取种子的信息
	                            BTDS_DOWNLOADING,	            // 正在下载中
                              BTDS_PAUSED,                  // 暂停
	                            BTDS_FINISHED,	              // 下载完成
	                            BTDS_SEEDING,	                // 供种中
	                            BTDS_ALLOCATING,              // 正在预分配磁盘空间 -- 预分配空间，减少磁盘碎片，和
                                                            // 启动选项有关，启动时如果选择预分配磁盘方式，可能进入该状态
                              BTDS_ERROR                    // 出错，可能是写磁盘出错等原因，详细原因可以通过调用DLBT_Downloader_GetLastError获知
                              );

  // 文件的分配模式,详见使用说明文档
   DLBT_FILE_ALLOCATE_TYPE = (
                                  FILE_ALLOCATE_REVERSED = 0,    // 预分配模式,预先创建文件,下载每一块后放到正确的位置.
                                  FILE_ALLOCATE_SPARSE =1 ,      // Default mode, more effient and less disk space. http://msdn.microsoft.com/en-us/library/aa365564(VS.85).aspx
                                  FILE_ALLOCATE_COMPACT = 2      // 文件大小随着下载不断增长,每下载一块数据按次序紧密排在一起,但不是他们的最终位置,下载中不断调整位置,最后文件位置方能确定

                                  );
  //种子的类型
   DLBT_TORRENT_TYPE = (
                            USE_PUBLIC_DHT_NODE   = 0,      // 使用公共的DHT网络资源
                            NO_USE_PUBLIC_DHT_NODE,         // 不使用公共的DHT网络节点
                            ONLY_USE_TRACKER               // 仅使用Tracker，禁止DHT网络和用户来源交换（私有种子）
                            );

  // 端口的类型
   PORT_TYPE = (
                    TCP_PORT        = 1,            // TCP 端口
                    UDP_PORT                        // UDP 端口
                    );
          
//=======================================================================================
//  设置加密相关函数,将协议字符串或者所有数据均加密，实现保密传输，在兼容BT协议上突破
//  绝大部分运营商的封锁。和前面提到的私有协议不同的是，私有协议后将形成自己
//  的P2P网络，不能同其它BT客户端兼容；但私有协议完全不是BT协议了，没有BT的痕迹，可以穿透
//  更多运营商的封锁。不同的网络下，可能需要不同设置。配合伪装Http使用，在某些网络下效果更佳
//=======================================================================================
  DLBT_ENCRYPT_OPTION = (
    DLBT_ENCRYPT_NONE,                  // 不支持任何加密的数据，遇到加密的通讯则断开
    DLBT_ENCRYPT_COMPATIBLE,            // 兼容模式：自己发起的连接不使用加密，但允许别人的加密连接进入，遇到加密的则同对方用加密模式会话；
    DLBT_ENCRYPT_FULL,                  // 完整加密：自己发起的连接默认使用加密，同时允许普通和加密的连接连入。遇到加密则用加密模式会话；遇到非加密则用明文模式会话。
                                        // 默认是完整加密
    DLBT_ENCRYPT_FORCED                // 强制加密，仅支持加密通讯，不接受普通连接，遇到不加密的则断开
  );

  // 加密层级： 加密层级高，理论上会浪费一点CPU，但数据传输安全和突破封锁的能力会有提升
  DLBT_ENCRYPT_LEVEL = (
    DLBT_ENCRYPT_PROTOCOL,          // 仅加密BT的通讯握手协议  －－一般用于防止运营商的阻止
    DLBT_ENCRYPT_DATA,              // 仅加密数据流（数据内容）－－ 用于保密性强的文件传输
    DLBT_ENCRYPT_PROTOCOL_MIX,      // 主动发起的连接使用加密协议模式，但如果对方使用了数据加密，也支持同他使用数据加密模式通讯
    DLBT_ENCRYPT_ALL                // 协议和数据均主动加密 
  );

  DLBT_RELEASE_FLAG = (
    DLBT_RELEASE_NO_WAIT = 0,           // 默认方式Release，直接释放，不等待释放完成
    DLBT_RELEASE_WAIT = 1,              // 等待所有文件都释放完成
    DLBT_RELEASE_DELETE_STATUS = 2,     // 删除状态文件
    DLBT_RELEASE_DELETE_ALL = 4         // 删除所有文件
    );


  DLBT_FILE_PRIORITIZE = (
                          DLBT_FILE_PRIORITY_CANCEL        =   0,
                          DLBT_FILE_PRIORITY_NORMAL,
                          DLBT_FILE_PRIORITY_ABOVE_NORMAL,
                          DLBT_FILE_PRIORITY_MAX
                          );

// 内核启动时的基本参数（是否启动DHT以及启动端口等）
 PDLBT_KERNEL_START_PARAM = ^DLBT_KERNEL_START_PARAM ;
  DLBT_KERNEL_START_PARAM = record
    bStartLocalDiscovery:          BOOL;     // 是否启动局域网内的自动发现（不通过DHT、Tracker，只要在一个局域网也能立即发现，局域网速度快，可以加速优先发现同一个局域网的人）
    bStartUPnP:                    BOOL;     // 是否自动UPnP映射点量BT内核所需的端口
    bStartDHT:                     BOOL;     // 默认是否启动DHT，如果默认不启动，可以后面调用接口来启动
    bLanUser:                      BOOL;     // 是否纯局域网用户（不希望用户进行外网连接和外网通讯，纯局域网下载模式---不占用外网带宽，只通过内网的用户间下载）
    bVODMode:                      BOOL;     // 设置内核的下载模式是否严格的VOD模式，严格的VOD模式下载时，一个文件的分块是严格按比较顺序的方式下载，从前向后下载；或者从中间某处拖动的位置向后下载
                                             // 该模式比较适合边下载边播放,针对这个模式做了很多优化。但由于不是随机下载，所以不大适合纯下载的方案，只建议在边下载边播放时使用。默认是普通模式下载
                                             // 仅VOD以上版本中有效
    startPort:                     USHORT;   // 内核监听的端口，如果startPort和endPort均为0 或者startPort > endPort || endPort > 32765 这种参数非法，则内核随机监听一个端口。 如果startPort和endPort合法
    endPort:                       USHORT;   // 内核则自动从startPort ---- endPort之间监听一个可用的端口。这个端口可以从DLBT_GetListenPort获得
  end;

//=======================================================================================
//  设置代理相关函数,商业授权版才有此功能，演示版暂不提供
//=======================================================================================
PDLBT_PROXY_SETTING = ^DLBT_PROXY_SETTING ;
DLBT_PROXY_SETTING = record
    proxyHost: array[1..256] of Ansichar;    // 代理服务器地址
    nPort:int;                          // 代理服务器的端口
    proxyUser: array[1..256] of Ansichar;    // 如果是需要验证的代理,输入用户名
    proxyPass: array[1..256] of Ansichar;    // 如果是需要验证的代理,输入密码
    proxyType:DLBT_PROXY_TYPE;      // 指定代理的类型
end;

  // 内核的基本信息
 PKERNEL_INFO = ^KERNEL_INFO ;
  KERNEL_INFO = record
    port:                          USHORT;      // 监听端口
    dhtStarted:                    BOOL;     // DHT是否启动
    totalDownloadConnectionCount:  int;         // 总的下载连接数
    downloadCount:                 int;         // 下载任务的个数
    totalDownloadSpeed:            int;         // 总下载速度
    totalUploadSpeed:              int;         // 总上传速度
    totalDownloadedByteCount:      UINT64;      // 总下载的字节数
    totalUploadedByteCount:        UINT64;      // 总上传的字节数
    peersNum:                      int;         // 当前连接上的节点总数
    dhtConnectedNodeNum:           int;         // dht连接上的活跃节点数
    dhtCachedNodeNum:              int;         // dht已知的节点数
    dhtTorrentNum:                 int;         // dht中已知的torrent文件数
  end;

  // 单个下载任务的基本信息
  PDOWNLOADER_INFO = ^DOWNLOADER_INFO;
  DOWNLOADER_INFO = record
    state:                 DLBT_DOWNLOAD_STATE ;      // 下载的状态
    percentDone:           single;                    // 已经下载的数据，相比整个torrent总数据的大小 （如果只选择了一部分文件下载，那么该进度不会到100%）
    downConnectionCount:   int;                       // 下载建立的连接数
    downloadLimit:         int;                       // 该任务的下载限速
    connectionCount:       int;                       // 总建立的连接数（包括上传）
    totalCompletedSeeds:   int;                       // 该任务下载总任务数，如果Tracker不支持scrap，则返回-1
    inCompleteNum:         int;                       // 总的未完成的人数，如果Tracker不支持scrap，则返回-1
    seedConnected:         int;                       // 连上的下载完成的人数
    totalCurrentSeedCount: Int;                       // 当前在线的总的下载完成的人数（包括连上的和未连上的）
    totalCurrentPeerCount: int;                       // 当前在线的总的下载的人数（包括连上的和未连上的）
    currentTaskProgress:   single;                    // 当前任务的进度 (100%代表完成）
    bReleasingFiles:       BOOL;                      // 是否正在释放文件句柄，一般下载完成后，虽然进度完成了，但文件句柄和缓存内部还可能需要一点时间在释放。
    
    downloadSpeed:         DWORD;                     // 下载的速度
    uploadSpeed:           DWORD;                     // 上传的速度
    serverPayloadSpeed:    DWORD;                     // 从服务器下载的总有效速度（不包括握手消息等非数据性传输）
    serverTotalSpeed:      DWORD;                     // 从服务器下载的总速度(包括握手消息、连接通讯的消耗）

    wastedByteCount:       UINT64;                    // 非数据的字节数（控制信息等）
    totalDownloadedBytes:  UINT64;                    // 下载的数据的字节数
    totalUploadedBytes:    UINT64;                    // 上传的数据的字节数
    totalWantedBytes:      UINT64;                    // 选择的总数据大小
    totalWantedDoneBytes:  UINT64;                    // 选择的总数据中，已下载完成的数据大小

    totalServerPayloadBytes: UINT64;                  // 从服务器下载的数据总量（本次启动以来的文件数据，也包括了如果收到错误的数据，即使后来丢弃的 -- 不过一般服务器如果没问题，不会丢弃数据的）
    totalServerBytes:      UINT64;                    // 从服务器下载的所有数据的总量（包括totalServerPayloadBytes，以及握手数据、收发消息等）
    totalPayloadBytesDown: UINT64;                    // 本次启动后总的下载的数据块类型的数据量（包括了服务器的数据，以及可能丢弃的数据）
    totalBytesDown:        UINT64;                    // 本次启动后，总的所有数据的下行数据量（包括了服务器以及所有客户的数据、辅助通讯数据量等）


    // Torrent信息
    bHaveTorrent:          BOOL;                      // 用于无种子下载模式，判断是否已经获取到了torrent文件
    totalFileSize:         UINT64;                    // 文件的总大小
    totalFileSizeExcludePadding: UINT64;              // 实际文件的大小，不含padding文件, 如果种子中无padding文件，则和totalFileSize相等
    totalPaddingSize:      UINT64;                    // 所有padding数据的大小。如果制作种子时没启用padding文件，则为0
    pieceCount:            int;                       // 分块数
    pieceSize:             int;                       // 每个块的大小
    infoHash:              array[1..256] of Ansichar;     // 文件的Hash值
  end;

  // 每个连接上的节点（用户）的信息
  PPEER_INFO_ENTRY = ^PEER_INFO_ENTRY;
  PEER_INFO_ENTRY = record
    connectionType:       int;                  //  连接类型 0：标准BT(tcp); 1: P2SP（http） 2: udp（可能是直接连接或者穿透）
    downloadSpeed:        int;                  // 下载速度
    uploadSpeed:          int;                  // 上传速度
    downloadedBytes:      UINT64;               // 下载的字节数
    uploadedBytes:        UINT64;               // 上传的字节数
    uploadLimit:          int;                  // 该连接的上传限速，比如如果对服务器的IP限速了，则这地方可以看到这个IP的限速情况
    downloadLimit:        int;                  // 该连接的下载限速，比如如果对服务器的IP限速了，则这地方可以看到这个IP的限速情况

    ip:                   array[0..63] of Ansichar; // 对方IP
    client:               array[0..63] of Ansichar; // 对方使用的客户端
  end;

  // 所有连接上的节点（用户）的信息
  PPEER_INFO = ^PEER_INFO;
  PPPEER_INFO = ^PPEER_INFO;
  PEER_INFO  = record
    count: int;                                  // 总的节点（用户）数
    entries: array[0..0] of PEER_INFO_ENTRY ;       // 节点信息的数组
  end;


// ***************************  以下是内核整体相关的接口 ********************************
